Apps/kavita/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: kavita
  name: kavita-service
  namespace: kavita
spec:
  ports:
    - name: "5000"
      port: 80
      targetPort: 5000
  selector:
    app: kavita
